css/style.css
/* page */
body{ 
    min-height: 100vh; 
    margin:0;
    font-family: 'Courier Prime', monospace;
    display:flex; 
    flex-direction:column;
}

.card-body a{
    text-decoration: none;
}

/* header, navbar */
header{ 
    min-height:80px;
}

.navbar { 
    width: 99%;
    background: white;
}

.nav-bar {
    display: flex;
}

.nav-link.active {
    text-decoration: underline;
}

.navbar-brand {
    font-weight: bold;
    font-size: x-large;
}

.navbar-darkmode {
    background-color: rgb(33, 37, 41);
}

.btnThemeMode{
    background: transparent;
    border: none;
    cursor:pointer;
    margin-top: 2px;
}

.themeModeIcon{
    font-size: 1.3rem;
}

.main-navbar{
    display: flex;
    justify-content: space-between;
    width: 82%;
    margin: 0px 20px;
}

.div-selectedFlag{
    position: relative;
    width: 35px;
    margin: 0 auto;
    padding: 5px 5px;
}

.div-optionsFlag{
    display: flex;
    justify-content: flex-start;
    flex-direction: column;
    padding-inline-start: 0px;
    display: none;
}

.dropdown{
    position: absolute;
    top: 70%;
    right: 68px;
    padding-inline-start: 0px;
    transition: all 0.3s ease-out;
    list-style: none;
}

.div-optionsFlag:after {
    content: "";
    width: 0;
    height: 0;
    position: absolute;
    right: 30px;
    top: 50%;
    margin-top: -3px;
}

.div-optionsFlag a {
    width: 29px;
    display: block;
    text-decoration: none;
    padding: 2px;
    transition: all 0.3s ease-out;
}

.div-flag{
    display: flex;
    margin: 0px 10px;
}

.show-options{
    display: block;
}

.nav-menu{
    display: flex;
    flex-direction: row;
    margin: 0px 10px;
}

/* content */
article{ 
    flex:1;
    display: flex;
    /* align-items: center; 
    align-content: center; */
}

.card {
    border: none;
}

/* content - home */
.container-home{
    display: flex;
    justify-content: center;
    align-items: center;
}

/* content - aboutme */
.article-aboutme {
    align-items: center; 
    align-content: center;
}

.container-aboutme{
    display: flex;
    align-content: center;
}

.row-aboutme{
    display: flex;
    align-items: center;
}

.img-profile{
    max-height: 300px;
    width: 300px;
    border: 4px solid rgb(33, 37, 41);
}

.img-profile-dark{
    border: 4px solid white;   
}

/* content - projects */
.row-project{
    margin: 30px;
}

.img-projects{
    height: 201px;
    width: 100%;
    border: 1px solid black;
    border-radius: 10px;
}

.img-projects-dark{
    border: 1px solid white;
}

.card-text{
    text-align: left;
}

/* content - skills */
.container-skills {
    display:flex;
    flex-direction: column;
    border: none;
}

.card-row-skills {
    margin-top: 4vh;
    margin-bottom: 4vh;
}

.card-col-skills {
    display: flex;
    justify-content: center;
}

.col-skills-content {
    display: flex;
    flex-direction: row;
}

.skill-content {
    padding: 3vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.img-skill {
    width: 8vh;
    margin-bottom: 20px;
}

.img-skill:hover {
    transform: scale(1.2);
    opacity: .6;
}

hr {
    border-color: #aaa;
    box-sizing: border-box;
    width: 100%;
}

/* footer */  
footer{ 
    padding: 1.2rem;
    font-size: small;
    color: rgb(33, 37, 41); 
    background-color: white;
    min-width: 100%;
    display: grid; 
    place-items: center;
}

.imgFooter {
    font-size: 2rem;
    color: rgb(33, 37, 41); 
}

.img-container {
    display: flex;
    justify-content: space-around;
    align-items: center;
    width: 150px;
    height: 50px;
}

.footer-darkmode {
    color: white;
    background-color: rgb(33, 37, 41);
}

.imgFooter-darkmode {
    color: white !important;
}

/* Mobile */
@media (max-width:768px)
{
    /* content - skills */
    .col-skills-content {
        justify-content: center;
    }
}

@media (max-width:1000px) and (min-width:768px)
{
    /* header, navbar */
    .nav-menu
    {
        display: flex;
        flex-direction: row-reverse;
    }

    .navbar>.container, .navbar>.container-fluid, .navbar>.container-lg, .navbar>.container-md, .navbar>.container-sm, .navbar>.container-xl, .navbar>.container-xxl
    {
        flex-wrap: nowrap;
    }

    .dropdown{
        position: absolute;
        top: 70%;
        right: 91px;
        padding-inline-start: 0px;
        transition: all 0.3s ease-out;
        list-style: none;
    }

    .img-projects{
        width: 100%;
    }

    .row-cols-md-3>* {
        width: 50%;
    }
}

